# polars-ecs-test

./: BENCHMARK_README.md  Cargo.toml  README.md
benches/: ecs_benchmarks.rs
src/: arrow_overhead_test.rs  arrow_polars_overhead.rs  arrow_zerocopy_test.rs  duckdb_arrow.rs  duckdb_arrow_dive.rs  duckdb_arrow_practices.rs  duckdb_arrow_spatial.rs  duckdb_bench.rs  duckdb_config_tuning.rs  duckdb_deep_dive.rs  duckdb_func_discovery.rs  duckdb_hash_join.rs  duckdb_intersects_vs_join.rs  duckdb_latency.rs  duckdb_lua_vscalar.rs  duckdb_luajit_ffi.rs  duckdb_math_funcs.rs  duckdb_min_overhead.rs  duckdb_optimized_spatial.rs  duckdb_overhead_deep.rs  duckdb_prior_art.rs  duckdb_push_logic.rs  duckdb_rtree_bulk.rs  duckdb_rtree_check.rs  duckdb_rtree_constant.rs  duckdb_rtree_correct.rs  duckdb_rtree_test.rs  duckdb_simulation.rs  duckdb_sparse.rs  duckdb_spatial_combat.rs  duckdb_spatial_deep.rs  duckdb_spatial_hash.rs  duckdb_spatial_opt.rs  duckdb_sqrt_prefilter.rs  duckdb_ultimate.rs  duckdb_union_parallel.rs  duckdb_vs_polars.rs  lua_batch_patterns.rs  lua_query_overhead.rs  lua_simd_showdown.rs  (+12 more)
