[package]
name = "polars-ecs-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "polars_bench"
path = "src/main.rs"

[[bin]]
name = "duckdb_bench"
path = "src/duckdb_bench.rs"

[[bin]]
name = "duckdb_sparse"
path = "src/duckdb_sparse.rs"

[[bin]]
name = "duckdb_simulation"
path = "src/duckdb_simulation.rs"

[[bin]]
name = "duckdb_spatial_opt"
path = "src/duckdb_spatial_opt.rs"

[[bin]]
name = "duckdb_latency"
path = "src/duckdb_latency.rs"

[[bin]]
name = "duckdb_arrow"
path = "src/duckdb_arrow.rs"

[[bin]]
name = "duckdb_arrow_spatial"
path = "src/duckdb_arrow_spatial.rs"

[[bin]]
name = "duckdb_min_overhead"
path = "src/duckdb_min_overhead.rs"

[[bin]]
name = "duckdb_deep_dive"
path = "src/duckdb_deep_dive.rs"

[[bin]]
name = "duckdb_arrow_dive"
path = "src/duckdb_arrow_dive.rs"

[[bin]]
name = "duckdb_push_logic"
path = "src/duckdb_push_logic.rs"

[[bin]]
name = "duckdb_spatial_combat"
path = "src/duckdb_spatial_combat.rs"

[[bin]]
name = "duckdb_rtree_check"
path = "src/duckdb_rtree_check.rs"

[[bin]]
name = "duckdb_rtree_test"
path = "src/duckdb_rtree_test.rs"

[[bin]]
name = "duckdb_rtree_correct"
path = "src/duckdb_rtree_correct.rs"

[[bin]]
name = "duckdb_rtree_constant"
path = "src/duckdb_rtree_constant.rs"

[[bin]]
name = "spatial_hashing_explained"
path = "src/spatial_hashing_explained.rs"

[[bin]]
name = "duckdb_intersects_vs_join"
path = "src/duckdb_intersects_vs_join.rs"

[[bin]]
name = "duckdb_prior_art"
path = "src/duckdb_prior_art.rs"

[[bin]]
name = "arrow_polars_overhead"
path = "src/arrow_polars_overhead.rs"

[[bin]]
name = "arrow_zerocopy_test"
path = "src/arrow_zerocopy_test.rs"

[[bin]]
name = "piccolo_duckdb_poc"
path = "src/piccolo_duckdb_poc.rs"

[[bin]]
name = "lua_query_overhead"
path = "src/lua_query_overhead.rs"

[[bin]]
name = "lua_udf_threadlocal"
path = "src/lua_udf_threadlocal.rs"

[[bin]]
name = "duckdb_lua_vscalar"
path = "src/duckdb_lua_vscalar.rs"

[[bin]]
name = "lua_vm_comparison"
path = "src/lua_vm_comparison.rs"

[[bin]]
name = "lua_vector_udf"
path = "src/lua_vector_udf.rs"

[[bin]]
name = "luajit_ffi_bench"
path = "src/luajit_ffi_bench.rs"

[[bin]]
name = "duckdb_luajit_ffi"
path = "src/duckdb_luajit_ffi.rs"

[[bin]]
name = "duckdb_arrow_practices"
path = "src/duckdb_arrow_practices.rs"

[[bin]]
name = "duckdb_optimized_spatial"
path = "src/duckdb_optimized_spatial.rs"

[[bin]]
name = "duckdb_rtree_bulk"
path = "src/duckdb_rtree_bulk.rs"

[[bin]]
name = "duckdb_sqrt_prefilter"
path = "src/duckdb_sqrt_prefilter.rs"

[[bin]]
name = "duckdb_spatial_hash"
path = "src/duckdb_spatial_hash.rs"

[[bin]]
name = "duckdb_spatial_deep"
path = "src/duckdb_spatial_deep.rs"

[[bin]]
name = "duckdb_hash_join"
path = "src/duckdb_hash_join.rs"

[[bin]]
name = "duckdb_union_parallel"
path = "src/duckdb_union_parallel.rs"

[[bin]]
name = "duckdb_math_funcs"
path = "src/duckdb_math_funcs.rs"

[[bin]]
name = "duckdb_func_discovery"
path = "src/duckdb_func_discovery.rs"

[[bin]]
name = "duckdb_ultimate"
path = "src/duckdb_ultimate.rs"

[[bin]]
name = "lua_simd_showdown"
path = "src/lua_simd_showdown.rs"

[[bin]]
name = "arrow_overhead_test"
path = "src/arrow_overhead_test.rs"

[[bin]]
name = "prepared_stmt_deep_dive"
path = "src/prepared_stmt_deep_dive.rs"

[[bin]]
name = "zerocopy_investigation"
path = "src/zerocopy_investigation.rs"

[[bin]]
name = "duckdb_vs_polars"
path = "src/duckdb_vs_polars.rs"

[[bin]]
name = "true_overhead"
path = "src/true_overhead.rs"

[[bin]]
name = "polars_joins"
path = "src/polars_joins.rs"

[dependencies]
jemallocator = { version = "*" }
polars = { version = "0.52", features = ["dtype-full", "lazy", "timezones"] }
polars-ops = { version = "0.52" }
rand = { version = "0.8.5" }
duckdb = { version = "1.1.1", features = ["bundled", "vtab", "vtab-arrow", "vscalar", "vscalar-arrow"] }
piccolo = "0.3.3"
mlua = { version = "0.10", features = ["luajit", "vendored"] }

[profile.release]
# Reduce linker memory usage to avoid OOM during compilation
lto = "thin"
codegen-units = 16

[profile.dev]
# Reduce memory usage for debug builds too
codegen-units = 16

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ecs_benchmarks"
harness = false